--- a/index.html
+++ b/index.html
@@ -1,55 +1,25 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title> The School Webpage </title>
-
+    <title>School Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="https://maxcd.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
-    <script src="https://ajax.googleleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <script src="https://maxcd.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awsome/4.7.0/css/font-awsome.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <nav class="navbar-inverse" style="position: sticky;top: 0;z-index: 99999">
-
-        <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle" data- toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-
-            <ul class="nav navbar-nav">
-                <li><a href="#">Whitehall.jr</a></li>
-                <li><a href="#">Campus life</a></li>
-                <li><a href="#">Achievements</a></li>
-                <li><a href="#">What’s New</a></li>
-                <li><a href="#">Alumni</a></li>
-                <li><a href="#">Contact us</a></li>
-            </ul>
-
-        </div>
-
-    </nav>
-
     <div class="announcement">
         <marquee id="marqueeStyle" onmouseover="this.stop();" onmouseout="this.start();">
             **Feel free to ask queries on school@gmail.com**
         </marquee>
     </div>
 
-    <iframe id="Video" src="https://lh3.googleusercontent.com/proxy/6wCou-d77W_2ntndp9Tr9F_CuaNyaKoYJ1OYKvGil6fXtAsu4KDlgSkJpz7CB2Wpz62slxcROk6jP1JQmN4zEvKOEg_4YjvkfLU_ehghpYj3NSCJqVqvPA9JbmvKR2XTQ0AWvYJMNPmayak"></iframe>
+    <iframe id="Images" src="https://lh3.googleusercontent.com/proxy/e-gzS0UHhPgZ9BotdCg5KdRiFPOw-weIx3ceIYfukf_X8s3iiEDpkDLGMONzJcQMWYWT0oNLi9dLiUKBLfw-ienMCjkPZgox3EJsvKTloZ6S3k8Rv2uF7QmcPzzz0KqWaD5Tni2QRnmH9rM"></iframe>
 
     <div class="container">
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="contactUs"> </div>
@@ -57,7 +27,7 @@
     </div>
 
     <div id="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d972.5759446569058!2d-0.48180682991863677!3d51.54031414197126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766e72446e09cf%3A0xe9b400292b8603dd!2sWhitehall%20Junior%20School!5e1!3m2!1sen!2suk!4v1629448772835!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://goo.gl/maps/CnoCRP1BTXYcdgxbA"></iframe>
     </div>
     <div id="details">
         <img src="https://i.posting.cc/RZM5c6hR/sp.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
@@ -75,6 +45,99 @@
             </a>
         </div>
     </div>
+
+    <div class="container">
+        <!--Campus Life-->
+        <div class="page-header" id="campus_life">
+            <h2 class="text-capitalize">Campus Life</h2>
+
+            <div class="row">
+                <!--1st Campus Life-->
+                <div class="travel_mainDiv">
+                    <img class="img-responsive" src="https://crinklerecruitment.com/GetSchoolImage.aspx?id=190">
+                    <h4 class="text-capitalize"><kbd>school lOGO</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">Was established in 1912</h5>
+                    <p class="text-muted text-left">This bridge means that we're all united! </p>
+                </div>
+                <!--2nd Campus Life-->
+                <div class="travel_mainDiv">
+                    <img class="school img" src="https://i.postimg.cc/KYzWbFpF/st2.jpg">
+                    <h4 class="text-capitalize"><kbd>school library</kbd></h4>
+                    <hr>
+                    <h5 class=" text-success text-capitalize">Was built in 1911</h5>
+                    <p class="text-muted text-left">Our libraries are inside the classroom. </p>
+
+                </div>
+                <!--3rd Campus life-->
+                <div class="travel_mainDiv">
+                    <img class="img-responsive" src="https://media-cdn.tripadvisor.com/media/photo-s/0d/61/8d/e4/view-from-the-entrance.jpg">
+                    <h4 class="text-capitalize"><kbd>school mound</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">Was created in WW1 or 2</h5>
+                    <p class="text-muted text-left">This is one of the school's most enjoyable things! </p>
+                </div>
+
+            </div>
+        </div>
+        <!--Achievements-->
+        <div class="page-header" id="achievements">
+            <h2 class="text-capitalize">school achievements</h2>
+        </div>
+        <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement1">
+            Inter School Debate On Environment Pollution <i class="fa fa-sort-desc"></i>
+        </div>
+        <!--1st Achievement-->
+        <div id="school_achievement1" class="collapse">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+                <img src="https://i.postimg.cc/KztDSHbx/se1.jpg" class="img-responsive img-thumbnail">
+            </div>
+
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                <h5 class="text-success text-left text-capitalize">Won first prize in inter school debate on environment pollution
+                </h5>
+                <p>Write about this achievement</p>
+            </div>
+        </div>
+        <!--2nd Achievement-->
+        <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement2">
+            Inter School Football Competition<i class="fa fa-sort-desc"></i>
+        </div>
+
+        <div id="school_achievement2" class="collapse">
+
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+
+                <img src="https://i.postimg.cc/sxcP1G1L/sm2.jpg" class="img-responsive img-thumbnail">
+            </div>
+
+            <div class="movie_text col-lg-9 col-md-9 col-sm-9 col-xs-12">
+                <h5 class="text-success text-left text-capitalize">Came second in inter school football competition
+                </h5>
+                <p>Write about this achievement</p>
+            </div>
+        </div>
+
+        <!--3rd Achievement--->
+
+        <div class="bg-primary  movie_head" data-toggle="collapse" data-target="#school_achievement3">
+            Inter School Science Project Competition<i class="fa fa-sort-desc"></i>
+        </div>
+
+        <div id="school_achievement3" class="collapse">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+                <img src="https://i.postimg.cc/zXzS67cY/sm3.jpg" class="img-responsive img-thumbnail">
+            </div>
+
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                <h5 class="text-left text-success text-capitalize">Won second price in inter school Science Project competition
+                </h5>
+                <p>Write about this achievement</p>
+            </div>
+        </div>
+
+    </div>
+    <div id="footer"></div>
 </body>
 
 </html>
