--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="map">
-        <iframe src="https://goo.gl/maps/CnoCRP1BTXYcdgxbA"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2481.5204929026318!2d-0.4828689847230239!3d51.54035417964055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766e72446e09cf%3A0xe9b400292b8603dd!2sWhitehall%20Junior%20School!5e0!3m2!1sen!2suk!4v1629449969455!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div id="details">
         <img src="https://i.posting.cc/RZM5c6hR/sp.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
